added rules to build C++ modules from idl files.
Thu Oct  9 23:28:10 2003  Tim Janik  <timj@gtk.org>

        * Makefile.am: added rules to build C++ modules from idl files.

        * bsecxxbase.[hc]*: wrap BseItem.compat_setup().

        * bsecxxmodule.[hc]*: allow setting the output buffer of a module.

        * bsecxxplugin.[hc]*: support in core "plugins", i.e. builtins.

        * bseitem.[hc]: added a method bse_item_compat_setup() to patch up
        object state during parsing according to an old *.bse version.

        * bseplugin.[hc]: provide export identity node for builtin types
        and initialize them.

        * bsestorage.[hc]: compat_setup() items after creation.

        * bseamplifier.cc, bseamplifier.idl: ported bseamplifier.[hc] to
        idl based C++ code. changed property setup to match BseBalance
        where appropriate. optimized inner loop, used C++ templates and
        bseincluder.h to generate processing loop special cases.
        added compat code to ensure compatibility with <=0.5.4 stored
        BseAmplifier setups.

        * bseamplifier.[hc]: removed.

        * bseincluder.h: generate switch()-able function calls with
        a constant integer argument (usefull for C++ templates) in
        the range 0..4096.

        * bse/icons/ampctrl.c: removed.
        * bse/icons/ampctrl.png: added.

svn path=/trunk/; revision=1337

--- a/TODO
+++ b/TODO
@@ -1,6 +1,10 @@
 FIXMES:
+- bse.idl defines bseamplifier, for which there is an idl file
+  (touch bseamplifier.idl; make breaks)
+- remove examplepeakfilter
+- introduce Volume() pspec type in idl files that the GUI can provide a dB slider for
 - fix syndrum parameter scale
-- adapt BseBalance audio-in-balance for BseAmplifier
+- adapt BseAmplifier balance from BseBalance audio-in-balance
 - nuke frequency fine-tune for biquad filter
 - add toplevel menu /Synthesizers/:
   /Synthesizers/Load from Effect Library
@@ -274,6 +278,8 @@ Effects:
   (main source for http://zynaddsubfx.sourceforge.net)
 
 sfidl:
+  - error "bseamplifier.idl:71: error: double definition of 'Bse::Amplifier' as same type" should
+    indicate where the previous definition was
   - support records and sequences in bse-plugin-generator and bseprocidl
   - reenable signals in bseprocidl
   fixes:
