--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Fri Oct 10 00:53:56 2003  Tim Janik  <timj@gtk.org>
+
+	* bseamplifier.idl (Bse): *sigh* workaround bse/bse.idl include.
+
 Fri Oct 10 00:22:03 2003  Tim Janik  <timj@gtk.org>
 
 	* bseprocidl.cc (printInterface): *sigh* prevent BseAmplifier from
