--- a/NEWS
+++ b/NEWS
@@ -9,13 +9,13 @@ Overview of Changes in BEAST/BSE 0.5.5:
 * Added .bse file playback facility to bsesh
 * Added support for C++ Plugins
 * Now installs bse-plugin-generator for simple creation of C++ Modules
+* Added manual pages for installed executables
+* Lots of small MIDI handling fixes
+* Fixed MP3 loader
 * Added prototype support to IDL compiler [Stefan Westerfeld]
 * Work around PTH poll() bug on NetBSD [Ben Collver, Tim Janik]
 * Support NetBSD sound device names [Ben Collver]
-* Fixed MP3 loader
-* Lots of small MIDI handling fixes
-* Various GUI improvements
-* Added manual pages for installed executables
+* Major GUI improvements
 * Lots of bug fixes
 
 Overview of Changes in BEAST/BSE 0.5.4:
